# turbojpeg-python

./: .gitignore  .pre-commit-config.yaml  generate_test_images.py  linux-build.sh  macos-build.sh  pyproject.toml  readme.md  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
tests/: test_transform.py
turbojpeg/: transform.cpp
