[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "pybind11>=2.10",
  "setuptools>=42",
]

[tool.cibuildwheel]
dependency-versions = "pinned"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.bandit]
skips = [ "B101" ]
